# sageFlow

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  build.sh  sage_flow.py
.github/: copilot-instructions.md  instructions.md  test-instructions.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: gtest-ci.yml  main-ci-tests.yml  todo.yml
cmake/: enableTest.cmake  gperftools.cmake  macros.cmake
config/: default_config.toml  index_test_config.toml  join_config.toml  join_method_cases.toml  join_pipeline_basic.toml  perf_join.toml  sift_config.toml
data/: .gitignore  generate_vectors.py  vectors_input.csv
docs/: CI.md  ClassDocumentation.md  Design.md  StreamManagerDesign.md  Structure.md  SystemRedesignProposal.md  join.md  log_level_audit.md  running.md
docs/rp/: candyflow-rp.drawio  join-todolist.md
examples/: CMakeLists.txt  README.md
examples/Source/: CMakeLists.txt  fvecs_to_vector_records.cpp  generate_vector_records.cpp
examples/Streaming/: CMakeLists.txt  IndexTest.cpp  aggregate.cpp  buffer_test.cpp  index_perf.cpp  itopk.cpp  join.cpp  main.cpp  run.sh  sift_windowed_stream.cpp  stream_manager_example.cpp  test1.cpp  test2.cpp  topk.cpp  windowed_stream.cpp
include/: candyflow.h
include/candy/: candy.h
include/common/: base_types.h  data_types.h  vector_data.h  vector_record.h
include/compute_engine/: compute_engine.h
include/concurrency/: blank_controller.h  concurrency_api.h  concurrency_controller.h  concurrency_manager.h  id_with_type.h
include/core/: state_interface.h
include/execution/: blocking_queue.h  collector.h  execution_graph.h  execution_vertex.h  input_gate.h  iqueue.h  partitioner.h  result_partition.h  ring_buffer_queue.h
include/function/: aggregate_function.h  file_source_function.h  filter_function.h  function.h  function_api.h  function_types.h  itopk_function.h  join_function.h  map_function.h  sink_function.h  source_function.h  topk_function.h  window_function.h
include/index/: global_index.h  hnsw.h  index.h  index_api.h  index_types.h  ivf.h  knn.h  vectraflow.h
include/operator/: aggregate_operator.h  filter_operator.h  itopk_operator.h  join_metrics.h  join_operator.h  map_operator.h  operator.h  operator_api.h  operator_types.h  output_operator.h  sink_operator.h  source_operator.h  (+2 more)
micro_service/: __init__.py
python/: bindings.cpp  sage_flow.py
setup/: Dockerfile  docker-compose.yml  start.sh  start_win.bat
src/: CMakeLists.txt
src/candy/: CMakeLists.txt  candy.cpp
src/common/: CMakeLists.txt  data_types.cpp  vector_data.cpp  vector_record.cpp
src/compute_engine/: CMakeLists.txt  compute_engine.cpp
src/concurrency/: CMakeLists.txt  blank_controller.cpp  concurrency_manager.cpp
src/core/: CMakeLists.txt
src/core/compute_engine/: compute_engine.cpp
src/core/utils/: monitoring.cpp
src/execution/: CMakeLists.txt  blocking_queue.cpp  execution_graph.cpp  execution_vertex.cpp  input_gate.cpp  result_partition.cpp  ring_buffer_queue.cpp
src/function/: CMakeLists.txt  aggregate_function.cpp  file_source_function.cpp  filter_function.cpp  function.cpp  itopk_function.cpp  join_function.cpp  map_function.cpp  sink_function.cpp  source_function.cpp  topk_function.cpp  window_function.cpp
src/index/: CMakeLists.txt  hnsw.cpp  ivf.cpp  knn.cpp  vectraflow.cpp
src/operator/: CMakeLists.txt  aggregate_operator.cpp  filter_operator.cpp  itopk_operator.cpp  join_operator.cpp  map_operator.cpp  operator.cpp  output_operator.cpp  sink_operator.cpp  source_operator.cpp  topk_operator.cpp  window_operator.cpp
src/operator/join_operator_methods/: base_method.cpp  bruteforce.cpp  ivf.cpp
src/operator/join_operator_methods/eager/: bruteforce.cpp  ivf.cpp
src/operator/join_operator_methods/lazy/: bruteforce.cpp  ivf.cpp
src/proto/: CMakeLists.txt  message.pb.cc
src/query/: CMakeLists.txt
src/query/executor/: CMakeLists.txt
src/query/optimizer/: CMakeLists.txt  planner.cpp
src/runtime/: CMakeLists.txt
src/runtime/function/: filter_function.cpp  function.cpp  join_function.cpp  map_function.cpp  sink_function.cpp
src/runtime/operator/: filter_operator.cpp  join_operator.cpp  map_operator.cpp  operator.cpp  output_operator.cpp  sink_operator.cpp
src/runtime/operator/methods/join/: base_method.cpp
src/runtime/operator/methods/join/eager/: bruteforce.cpp
src/runtime/operator/methods/join/lazy/: bruteforce.cpp
src/runtime/operators/: base_operators.cpp  log_operator.cpp
src/storage/: CMakeLists.txt  storage_manager.cpp
src/stream/: CMakeLists.txt  stream.cpp  stream_environment.cpp
src/stream/data_stream_source/: data_stream_source.cpp  file_stream_source.cpp  sift_stream_source.cpp  simple_stream_source.cpp
src/stream/time/: watermark_generator.cpp
src/streaming/: CMakeLists.txt  data_stream.cpp  planner.cpp  stream.cpp  stream_environment.cpp
src/streaming/data_stream/: file_stream.cpp  kafka_stream.cpp  tcp_stream.cpp
src/streaming/data_stream_source/: data_stream_source.cpp  file_stream_source.cpp
src/streaming/datastream/: file_stream.cpp
src/utils/: CMakeLists.txt  log_config.cpp  monitoring.cpp
src/vector_db/: CMakeLists.txt  query_executor.cpp  storage_engine.cpp  vector_database.cpp
src/vector_db/indexing/: CMakeLists.txt  anns.cpp
test/: CMakeLists.txt  run_join_tests.py
test/IntegrationTest/: CMakeLists.txt  test_pipeline.cpp  test_pipeline_basic.cpp  test_pipeline_execution.cpp
test/Performance/: CMakeLists.txt  IndexTest.cpp  test_join_perf_scaling.cpp  test_join_performance_methods.cpp  test_window_pipeline.cpp
test/UnitTest/: CMakeLists.txt  test_compute_engine.cpp  test_config_driven.cpp  test_config_manager.cpp  test_config_manager.h  test_data_adapter.h  test_data_generator.cpp  test_data_generator.h  test_file_stream.cpp  test_file_stream_source.cpp  test_join_bruteforce.cpp  test_join_ivf.cpp  test_kafka_stream.cpp  test_tcp_stream.cpp
test/test_utils/: dynamic_config.cpp  dynamic_config.h  test_config_manager.cpp  test_config_manager.h  test_data_adapter.h  test_data_generator.cpp  test_data_generator.h
(+87 files in other folders)
