add_subdirectory(
        utils
)
add_subdirectory(
        index
)
add_subdirectory(
        common
)
add_subdirectory(
        compute_engine
)
add_subdirectory(
        concurrency
)
add_subdirectory(
        execution
)
add_subdirectory(
        function
)
add_subdirectory(
        operator
)
add_subdirectory(
        query
)
add_subdirectory(
       storage
)
add_subdirectory(
        stream
)
add_library(
        candy
        INTERFACE
)
target_link_libraries(
        candy
        INTERFACE
        externalLibs
        execution
        stream
        query
        operator
        function
        common
        utils
        concurrency
        storage
        index
        compute_engine
)