add_lib(
        operator
        filter_operator.cpp
        join_operator.cpp
        map_operator.cpp
        operator.cpp
        output_operator.cpp
        sink_operator.cpp
        topk_operator.cpp
        window_operator.cpp
        itopk_operator.cpp
        join_operator_methods/base_method.cpp
        join_operator_methods/eager/bruteforce.cpp
        join_operator_methods/lazy/bruteforce.cpp
)
target_link_libraries(
        operator
        function
)