add_lib(
        operator
        filter_operator.cpp
        join_operator.cpp
        map_operator.cpp
        operator.cpp
        output_operator.cpp
        sink_operator.cpp
        topk_operator.cpp
        window_operator.cpp
        itopk_operator.cpp
        aggregate_operator.cpp
        join_operator_methods/base_method.cpp
        join_operator_methods/bruteforce.cpp
        join_operator_methods/ivf.cpp
)
target_link_libraries(
        operator
        function
)

# 打开 join_operator 的数据打桩开关，启用指标采集代码块（可通过顶层选项控制）
if(CANDY_ENABLE_METRICS)
    target_compile_definitions(
            operator
            PRIVATE
            CANDY_ENABLE_METRICS=1
    )
endif()